adds contour objective and minimize function

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@visx/shape": "^3.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "d3-contour": "^4.0.2",
     "lucide-react": "^0.508.0",
     "motion": "^12.10.4",
     "next": "14.2.28",
@@ -28,6 +29,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/d3-contour": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
